Stabilize Jenkins test and Sonar pipeline